@@ -1,3 +1,7 @@
+drkns 05.09.2016 20:21:32 +0200 - build 4782
+
+1. С форума: не работало копирование после Ctrl+L Tab Ctrl+L.
+
 zg 05.09.2016 19:25:21 +0200 - build 4781
 
 1. с форума: Если вызвать команду FCTL_GETUSERSCREEN в момент когда на экране диалог (то же если меню или справка),
